Added display messages w/ timeout.  Display JSON, tested and it works.

--- a/exampleeasy2.json
+++ b/exampleeasy2.json
@@ -1,9 +1,1 @@
-{
-    "tubes": [
-        ["RED","BLUE","YELLOW"],
-        ["BLUE","YELLOW","RED"],
-        ["YELLOW","RED","BLUE"],
-        [],
-        []
-    ]
-}
+{"tubes":[["RED","BLUE","YELLOW"],["BLUE","YELLOW","RED"],["YELLOW","RED","BLUE"],[],[]]}
